--- a/atividade01 _ 06-03-24/style.css
+++ b/atividade01 _ 06-03-24/style.css
@@ -12,11 +12,16 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    background-color: #21364D;
+    background-color: #21364d;
 }
 
 li {
     list-style: none;
+    transition: all 0.5s ease;
+}
+
+li:hover {
+    color: aliceblue;
 }
 
 ul {
@@ -29,7 +34,6 @@ a {
     color: inherit;
     transition: all 0.5s ease;
 }
-
 
 header,
 a {
@@ -45,9 +49,10 @@ header {
     font-size: 24px;
     width: 100vw;
     height: 100px;
+    padding: 0px 120px;
     display: flex;
-    justify-content: space-around;
-    background-color: #7A8DA5;
+    justify-content: space-between;
+    background-color: #7a8da5;
     text-align: center;
     color: #003668;
     align-items: center;
